add search and status filters in list campaigns and analytics ui color update
